--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,6 @@
 header {
   width: 100%;
-  padding: 10px;
+  padding: 10px 20px;
   z-index: 100;
   background-color: #01819d;
   box-sizing: border-box;
