--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -36,6 +36,7 @@ h1 {
   text-align: left;
   margin-block: 10px 0px;
   margin-left: -8px;
+  letter-spacing: -4px;
 }
 
 h3 {
@@ -63,11 +64,11 @@ p a:hover {
 }
 
 button {
-  border: 2px solid #213547;
-  background-color: #d3f4fc;
+  background-color: #01819d;
   border-radius: 8px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   letter-spacing: 0.02em;
   padding: 10px 18px;
+  color: white;
 }
