--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -6,6 +6,7 @@ h2 {
 
 h3 {
   margin-bottom: 0.5em;
+  font-weight: 500;
 }
 
 .services-container {
@@ -22,6 +23,11 @@ h3 {
   text-align: left;
   padding-inline: 4em;
   width: 50%;
+}
+
+span.services-image {
+  width: 50%;
+  overflow: hidden;
 }
 
 .service_description {
