--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 80px);
+  height: 100vh;
   overflow: hidden;
 }
 
