--- a/src/components/Location/location.css
+++ b/src/components/Location/location.css
@@ -8,7 +8,7 @@ h2 {
 .location_container {
   width: 100%;
   padding-block: 4em;
-  height: 100vh;
+  height: 95vh;
   box-sizing: border-box;
 }
 
@@ -44,4 +44,5 @@ h2 {
 
 .carrousel h2 {
   text-align: left;
+  letter-spacing: -1px;
 }
