--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
   overflow: hidden;
 }
 
@@ -31,10 +31,10 @@
 }
 
 h1 {
-  font-size: 6em;
-  line-height: 85px;
+  font-size: 6em !important;
+  line-height: 85px !important;
   text-align: left;
-  margin-block: 10px 0px;
+  margin-block: 10px;
   margin-left: -8px;
   letter-spacing: -4px;
 }
@@ -64,9 +64,8 @@ p a:hover {
 }
 
 button {
-  background-color: #01819d;
-  border-radius: 8px;
-  cursor: pointer;
+  border-radius: 8px !important ;
+  cursor: pointer !important;
   transition: background-color 0.3s ease;
   letter-spacing: 0.02em;
   padding: 10px 18px;
