--- a/src/components/Location/location.css
+++ b/src/components/Location/location.css
@@ -8,7 +8,7 @@ h2 {
 .location_container {
   width: 100%;
   padding-block: 4em;
-  height: 95vh;
+  /* height: 95vh; */
   box-sizing: border-box;
 }
 
