--- a/src/components/Location/location.css
+++ b/src/components/Location/location.css
@@ -8,8 +8,11 @@ h2 {
 .location_container {
   width: 100%;
   padding-block: 4em;
-  /* height: 95vh; */
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: calc(100vh + 68px);
 }
 
 .location_content {
