--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,13 @@
 }
 
 body {
-  margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
   color: #162430;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 .download-link {
