Arregla margin disparejo titulos

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@ body {
   margin: 0 !important;
 }
 
+p {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+}
+
 .download-link {
   display: block;
   font-weight: bolder;
